npm package.json

--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "@babel/core": "^7.11.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.11.0",
+    "axios": "^0.20.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
-    "css-loader": "^2.1.0",
+    "css-loader": "^2.1.1",
     "vue-cropper": "^0.4.9",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "axios": "*"
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "vue": "^2.6.12",
