--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "blog",
+  "name": "hand-vue3-project",
   "version": "1.0.0",
-  "description": "My blog",
-  "private": true,
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack --config static/vue-blog/webpack.config.js",
+    "dev": "webpack serve --progress --config static/vue-blog/webpack.config.js"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "scripts": {
-    "build": "webpack --config static/vue-blog/webpack.config.js --mode production"
+  "dependencies": {
+    "axios": "^0.21.1",
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.11.0",
-    "axios": "^0.20.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
-    "babel-preset-env": "^1.7.0",
-    "css-loader": "^2.1.1",
-    "vue-cropper": "^0.4.9",
-    "vue-loader": "^15.9.3",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
-  },
-  "dependencies": {
-    "vue": "^2.6.12",
-    "vue-router": "^3.4.3"
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@vue/compiler-sfc": "^3.0.5",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^4.5.1",
+    "style-loader": "^2.0.0",
+    "vue-loader": "^16.1.2",
+    "webpack": "^5.17.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
