--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-loader": "^16.1.2",
     "webpack": "^5.17.0",
     "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.4.0",
+    "webpack-obfuscator": "^3.5.0"
   }
 }
