--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "vue-loader": "^16.1.2",
     "webpack": "^5.17.0",
     "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^4.4.0",
-    "webpack-obfuscator": "^3.5.1"
+    "webpack-dev-server": "^4.4.0"
   }
 }
